--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ NEWS - list of user-visible changes between releases of GNU Libtool
 
 New in 1.2e: CVS version:
 * Support for BeOS
-* Improved support for Win32, SysV 4.3 and NetBSD
+* Improved support for Win32, SysV 4.3, BSD/OS 4.x and NetBSD
 * Various bugfixes
 
 New in 1.2c: CVS version; 1.2d: 1998-12-16, Libtool team:
