* libtool.m4 (AM_SYS_NM_PARSE): need for underscore prefix is now  	auto-detected, by trying first without, then with it 	* ltconfig.in: ditto

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-01-11  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* libtool.m4 (AM_SYS_NM_PARSE): need for underscore prefix is now
+ 	auto-detected, by trying first without, then with it
+	* ltconfig.in: ditto
+
 1999-01-10  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* configure.in (AC_CONFIG_SUBDIRS): add libltdl, demo, mdemo and
