--- a/ChangeLog
+++ b/ChangeLog
@@ -80,10 +80,15 @@
 	  non-libtool modules, dlopen with the flags GLOBAL and NOW
 	* mdemo/main.c: report the error using lt_dlerror()
 	
+1999-01-08  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
+
+	* doc/libtool.texi (old_archive_from_new_commands): Documented
+	this ltcofig variable.
+
 1999-01-07  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
 
 	* ltmain.sh (cygwin, allow_undefined): Unfortunately, there are
-	problems with the above when trying to make a dll which has
+	problems with this variable when trying to make a dll which has
 	undefined symbols, in which case not even a static library is
 	built.  For now, we need to specify -no-undefined on the libtool
 	link line when we can be certain that all symbols are satisfied,
