--- a/THANKS
+++ b/THANKS
@@ -13,6 +13,7 @@ Bruno Haible <haible@ilog.fr>
 Carl D. Roth <roth@cse.ucsc.edu>
 Charles S. Kerr <cskerr@delenn.jccbi.gov>
 Chris P. Ross <cross@eng.us.uu.net>
+Edouard G. Parmelan <Edouard.Parmelan@France.NCR.COM>
 Eric Estievenart <eric@via.ecp.fr>
 Erez Zadok <ezk@shekel.mcl.cs.columbia.edu>
 H.J. Lu <hjl@gnu.org>
