--- a/THANKS
+++ b/THANKS
@@ -28,6 +28,7 @@ Marc J. Fraioli <fraioli@dg-rtp.dg.com>
 Mark Kettenis <kettenis@phys.uva.nl>
 Mimi Burbank <mimi@scri.fsu.edu>
 Oliver Guntermann <og@informatik.uni-hannover.de>
+Raffaele Sena <raff@aromatic.com>
 Stephan Kulow <coolo@kde.org>
 Thomas Esser <te@informatik.uni-hannover.de>
 Todd Vierling <tv@pobox.com>
